Added in IS Website to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>This is my New Site</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>IS436 Lab 4</title>
+</head>
+<body>
+<h1>IS436 Lab 4</h1>
+<p>Click on the link below to view the page.</p>
+<a href="https://informationsystem.umbc.edu">IS Website</a>
+
+</body>
+
+</html>
