--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>IS436 Lab 4</h1>
 <p>Click on the link below to view the page.</p>
-<a href="https://informationsystem.umbc.edu">IS Website</a>
+<a href="https://informationsystems.umbc.edu">IS Website</a>
 
 </body>
 
