--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>IS436 Lab 4</h1>
+<h2> By Sam Adams</h2>
 <p>Click on the link below to view the page.</p>
 <a href="https://informationsystems.umbc.edu">IS Website</a>
 
