--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
             </ul>
           </div>
         </div>
-      </nav>  
+      </nav> 
+      
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            1 of 2
+          </div>
+          <div class="col">
+            2 of 2
+          </div>
+        </div>
 </body>
 </html>
