--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="#">Programs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact-Us</a>
+                <a class="nav-link" href="contact.html">Contact-Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
